# ESPAlarmSystem

./: .gitignore  .gitmodules
ESPAlarmController/: CMakeLists.txt  coverage-report  platformio.ini  run-tests
ESPAlarmController/data/html/: AlarmSystem.js  EventList.js  SensorList.js  index.html  main.js  styles.css
ESPAlarmController/lib/: AutoFile  ESPNowServer  Logging  MemTracker  WavFilePlayer
ESPAlarmController/src/: ActivityLog.cpp  ActivityLog.h  AlarmOperation.h  AlarmPersistentState.cpp  AlarmPersistentState.h  AlarmPolicy.cpp  AlarmPolicy.h  AlarmSensor.cpp  AlarmSensor.h  AlarmState.h  AlarmSystem.cpp  AlarmSystem.h  AlarmWebServer.cpp  AlarmWebServer.h  SensorDb.cpp  SensorDb.h  SoundPlayer,.cpp  SoundPlayer.h  main.cpp
ESPAlarmController/test/: ActivityLog_unittest.cpp  AlarmPersistentState_test.cpp  AlarmPolicy_uinttest.cpp  AlarmSensor_unittest.cpp  AlarmSystem_test.cpp  CMakeLists.txt  SensorDb_test.cpp
ESPAlarmController/test/mocks/: ActivityLog.cpp  AlarmWebServer.cpp  Arduino.cpp  Arduino.h  AudioGeneratorWAV.h  ESPNowServer.cpp  MemTracker.cpp  TestESPNowServer.h  TestWavFilePlayer.h  WavFilePlayer.cpp  stdlib_noniso.c  stdlib_noniso.h
ESPAlarmController/test/system_mocks/: Arduino.cpp  Arduino.h  AudioFileSourceSPIFFS.h  AudioGeneratorAAC.h  AudioOutputI2S.h  CMakeLists.txt  FS.cpp  FS.h  FileData.cpp  FileData.h  FileImpl.cpp  FileImpl.h  FsImpl.cpp  FsImpl.h  SPIFFS.cpp  Stream.cpp  WString.h  WebServer.h  mockControl.h  pgmspace.h
ESPAlarmController/test/webserver/: webserver.py
ESPContactSensor/: platformio.ini
ESPContactSensor/lib/: ESPDeepSleep  ESPNowClient
ESPContactSensor/lib/ESPNowClient/: ESPNowClient.cpp  ESPNowClient.h
ESPContactSensor/src/: contactsensor.cpp  contactsensor.h  main.cpp  switchsensor.cpp  switchsensor.h
include/: alarm_config.h  alarm_config.template.h  protocol.h
lib/AutoFile/: AutoFile.h
lib/ESPDeepSleep/: ESPDeepSleep.cpp
lib/ESPNowClient/: ESPNowClient.cpp  ESPNowClient.h
lib/ESPNowServer/: ESPNowServer.cpp  ESPNowServer.h
lib/Logging/: Logging.h
lib/MemTracker/: MemTracker.cpp  MemTracker.h
lib/WavFilePlayer/: WavFilePlayer.cpp  WavFilePlayer.h
